--- a/src/docs/5.34.x/page-builder/theming/theme-object.mdx
+++ b/src/docs/5.34.x/page-builder/theming/theme-object.mdx
@@ -316,7 +316,7 @@ export const createCustomPageElement = () => {
 
 <Alert type={"info"}>
 
-  Most often, styles for custom page elements are introduced via one or more standalone Emotion styled components.
+  Most often, styles for custom page elements are introduced via one or more standalone [Emotion styled components](https://emotion.sh/docs/styled).
 
 </Alert>
 
