fix: remove mentions of WCP being in alpha

--- a/src/docs/5.30.x/wcp/overview.mdx
+++ b/src/docs/5.30.x/wcp/overview.mdx
@@ -7,7 +7,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="info" title="Can I use this?">
 
-Webiny Control Panel ("WCP") is currently in a private Alpha release. If you wish to join the Alpha testing program, register your interest on our [waiting list](https://site.webiny.com/forms/business-waiting-list/).
+Webiny Control Panel (WCP) is currently in beta.
 
 </Alert>
 
@@ -102,22 +102,7 @@ In case you require a higher API calls limit on non-production environments, ple
 
 </Alert>
 
-## ⚠️ Alpha Limits
-
-While WCP is in the Alpha stage, additional limits apply:
-
-- All projects have a hardcoded license that can't be changed
-- All projects are limited to 10 CMS user seats
-- All projects have multi-tenancy active
-- All other add-ons are turned off
-
-<Alert type="info" title="Billing">
-
-While WCP is in the Alpha stage, all projects are free. You won't be billed!
-
-</Alert>
-
-## ⚠️ Upgrading from the Open-Source edition
+## ⚠Upgrading from the Open-Source edition
 
 When you upgrade from the Open-Source edition to the Business tier, your project will automatically upgrade to a multi-tenancy setup. This upgrade will affect how your API works.
 
