--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -4,15 +4,35 @@ title: Webiny 5.35.1 Changelog
 description: See what's new in Webiny version 5.35.1.
 ---
 
+import PbEditorEditingValues from "./assets/pb-editor-editing-values.png";
+
 ## Page Builder
 
-### ✍️ Editing Template Variables In Page Editor Now Works as Expected [#3286](https://github.com/webiny/webiny-js/pull/3286)
+### Editing Template Variables In Page Editor Now Works as Expected ([#3286](https://github.com/webiny/webiny-js/pull/3286))
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies
+Prior to this release, editing values of template variables in Page Builder's page editor would not work as expected. This has now been addressed.
+
+![Editing Template Variables in Page Editor](./assets/pb-editor-editing-values.png)
 
 ## Deployments
 
-### ✍️ Website's Lambda@Edge Function Is No Longer Destroyed Automatically ([#3278](https://github.com/webiny/webiny-js/pull/3278))
+### Website's Lambda@Edge Function Is No Longer Destroyed Automatically ([#3278](https://github.com/webiny/webiny-js/pull/3278))
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies
+When Webiny's [multi-tenancy](/docs/enterprise/multi-tenancy) feature is enabled, as part of the **Website** project application, Webiny deploys an additional [Lambda@Edge](https://aws.amazon.com/lambda/edge/) function, which is used for additional multi-tenancy-related routing purposes.
+
+From this release, this function is no longer automatically destroyed when destroying the project application. It must be destroyed manually, either via the [AWS Console](https://aws.amazon.com/console/), or via the [AWS CLI](https://aws.amazon.com/cli/).
+
+This is because of an AWS limitation, which does not allow the immediate deletion of Lambda@Edge functions. Trying to immediately delete the function will result in an error, which is why Webiny does not attempt to delete it automatically.
+
+<Alert type={"info"}>
+
+  Note that Lambda@Edge functions are always deployed into `us-east-1` region. Make sure it is selected in the AWS Console, or via the AWS CLI, before proceeding with the deletion.
+
+</Alert>
+
+<Alert type={"info"}>
+
+  Check the [Deleting Lambda@Edge functions and replicas](https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/lambda-edge-delete-replicas.html) article for more information on how to delete Lambda@Edge functions.
+
+</Alert>
 
