wip: create 5.35.1 release notes

--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -4,7 +4,14 @@ title: Webiny 5.35.1 Changelog
 description: See what's new in Webiny version 5.35.1.
 ---
 
-import PbEditorEditingValues from "./assets/pb-editor-editing-values.png";
+<Alert type={"info"}>
+
+For the full list of changes, check out the [Webiny 5.35.1](https://github.com/webiny/webiny-js/releases/tag/v5.35.1)
+release on GitHub.
+
+</Alert>
+
+import pbEditorEditingValues from "./assets/pb-editor-editing-values.png";
 
 ## Page Builder
 
@@ -12,7 +19,7 @@ import PbEditorEditingValues from "./assets/pb-editor-editing-values.png";
 
 Prior to this release, editing values of template variables in Page Builder's page editor would not work as expected. This has now been addressed.
 
-![Editing Template Variables in Page Editor](./assets/pb-editor-editing-values.png)
+<Image src={pbEditorEditingValues} title={"Editing Template Variables in Page Editor"} />
 
 ## Deployments
 
@@ -26,13 +33,15 @@ This is because of an AWS limitation, which does not allow the immediate deletio
 
 <Alert type={"info"}>
 
-  Note that Lambda@Edge functions are always deployed into `us-east-1` region. Make sure it is selected in the AWS Console, or via the AWS CLI, before proceeding with the deletion.
+Note that Lambda@Edge functions are always deployed into `us-east-1` region. Make sure it is selected in the AWS
+Console, or via the AWS CLI, before proceeding with the deletion.
 
 </Alert>
 
 <Alert type={"info"}>
 
-  Check the [Deleting Lambda@Edge functions and replicas](https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/lambda-edge-delete-replicas.html) article for more information on how to delete Lambda@Edge functions.
+Check the [Deleting Lambda@Edge functions and
+replicas](https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/lambda-edge-delete-replicas.html) article
+for more information on how to delete Lambda@Edge functions.
 
 </Alert>
-
