wip: create 5.35.1 release notes

--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -21,6 +21,12 @@ Prior to this release, editing values of template variables in Page Builder's pa
 
 <Image src={pbEditorEditingValues} title={"Editing Template Variables in Page Editor"} />
 
+### Content Inconsistency Issues In Template Editor ([#3286](https://github.com/webiny/webiny-js/pull/3286))
+
+Because of an issue in the related backend GraphQL API mutation, after doing a full page refresh, Page Builder's template layout editor would intermittently fail to show the latest template content.
+
+This has now been addressed.
+
 ## Deployments
 
 ### Website's Lambda@Edge Function Is No Longer Destroyed Automatically ([#3278](https://github.com/webiny/webiny-js/pull/3278))
