feat: update changelog

--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -27,6 +27,19 @@ Because of an issue in the related backend GraphQL API query, after doing a full
 
 This has now been addressed.
 
+## File Manager
+
+### Compare File Extensions in a Case Insensitive Manner ([#3278](https://github.com/webiny/webiny-js/pull/3293))
+When uploading files, Webiny checks if the content type matches the extension in the file name, and if not, appends a proper extension, using a mime type catalog. There was a bug with extension checks, where upper case extensions were not matched properly, which resulted in extension duplication. This is now fixed, and extension checks work correctly.
+
+## Development
+
+### Lock User Project Dependencies ([#3301](https://github.com/webiny/webiny-js/pull/3301))
+From now on, all dependencies in user's project will be locked to a fixed version, which corresponds to a version that we tested in our CI. This will reduce the risk of some 3rd party dependency affecting the entire project, and breaking the build. There's still a possibility of a transient dependency affecting the project, but that's completely outside our control.  We also considered shipping the entire `yarn.lock` file, but that's a very challenging approach, so to have at least a basic safety net, for now, we're locking the dependencies.
+
+### Fix `onKeyDown` Callback Dependencies ([#3302](https://github.com/webiny/webiny-js/pull/3302))
+There was a bug with the Input component which would run the outdated callback on `onEnter`. This only manifested itself in the Headless CMS UI, when using multiple text inputs. Hitting `Enter` would cause weird value updates to happen. This is now fixed.
+
 ## Deployments
 
 ### Website's Lambda@Edge Function Is No Longer Destroyed Automatically ([#3278](https://github.com/webiny/webiny-js/pull/3278))
