wip: create 5.35.1 release notes

--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -64,3 +64,9 @@ replicas](https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/lam
 for more information on how to delete Lambda@Edge functions.
 
 </Alert>
+
+## Documentation
+
+### Updated Page Builder Theming Documentation
+
+The [Page Builder Theming](/docs/page-builder/theming/introduction) section of articles has been completely refreshed and now contains up-to-date information on how to create and use custom themes with websites created with Webiny's Page Builder application.
