feat: add aco security paragraph

--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -15,6 +15,14 @@ import pbEditorEditingValues from "./assets/pb-editor-editing-values.png";
 
 ## Page Builder
 
+### Check basic permissions for ACO schemas ([#3296](https://github.com/webiny/webiny-js/pull/3296))
+
+With 5.35.0 version we added the Advanced Content Organization (ACO) for Page Builder and a bunch of new schemas to handle these functionalities.  With this release, add basic security permissions, checking if the requester user is authenticated.
+
+<Alert type={"alert"}>
+We strongly advice to upgrade to 5.35.1 to enforce security rules to ACO releated schemas.
+</Alert>
+
 ### Editing Template Variables In Page Editor Now Works as Expected ([#3286](https://github.com/webiny/webiny-js/pull/3286))
 
 Prior to this release, editing values of template variables in Page Builder's page editor would not work as expected. This has now been addressed.
