feat: fix alert type

--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -19,7 +19,7 @@ import pbEditorEditingValues from "./assets/pb-editor-editing-values.png";
 
 With 5.35.0 version we added the Advanced Content Organization (ACO) for Page Builder and a bunch of new schemas to handle these functionalities.  With this release, add basic security permissions, checking if the requester user is authenticated.
 
-<Alert type={"alert"}>
+<Alert type="warning">
 We strongly advice to upgrade to 5.35.1 to enforce security rules to ACO releated schemas.
 </Alert>
 
