wip: create 5.35.1 release notes

--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -17,10 +17,16 @@ import pbEditorEditingValues from "./assets/pb-editor-editing-values.png";
 
 ### Check basic permissions for ACO schemas ([#3296](https://github.com/webiny/webiny-js/pull/3296))
 
-With 5.35.0 version we added the Advanced Content Organization (ACO) for Page Builder and a bunch of new schemas to handle these functionalities.  With this release, add basic security permissions, checking if the requester user is authenticated.
+With [5.35.0](/docs/release-notes/5.35.0/changelog) release, we've introduced the [Advanced Content Organization (ACO)](/docs/release-notes/5.35.0/changelog#introducing-advanced-content-organization-for-page-builder) for Page Builder. 
 
-<Alert type="warning">
-We strongly advice to upgrade to 5.35.1 to enforce security rules to ACO releated schemas.
+Apart from the new frontend user interface, this new feature also introduced multiple new GraphQL queries and mutations on the backend GraphQL API. Unfortunately, prior to this release, these operations were unintentionally left accessible and open to non-authenticated users.
+
+This is no longer the case. From this release, all ACO-related GraphQL queries and mutations are inaccessible to non-authenticated users..
+
+<Alert type="danger">
+
+  Because having the mentioned GraphQL operations open to non-authenticated users might pose a data security risk to your organization, we strongly advise all users to [upgrade to 5.35.1](/docs/release-notes/5.35.1/upgrade-guide) as soon as possible.
+
 </Alert>
 
 ### Editing Template Variables In Page Editor Now Works as Expected ([#3286](https://github.com/webiny/webiny-js/pull/3286))
