--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -19,13 +19,13 @@ import pbEditorEditingValues from "./assets/pb-editor-editing-values.png";
 
 With [5.35.0](/docs/release-notes/5.35.0/changelog) release, we've introduced the [Advanced Content Organization (ACO)](/docs/release-notes/5.35.0/changelog#introducing-advanced-content-organization-for-page-builder) for Page Builder. 
 
-Apart from the new frontend user interface, this new feature also introduced multiple new GraphQL queries and mutations on the backend GraphQL API. Unfortunately, prior to this release, these operations were unintentionally left accessible and open to non-authenticated users.
+Apart from the new frontend user interface, this new feature also introduced multiple new GraphQL queries and mutations on the backend GraphQL API. Unfortunately, prior to release, these operations were unintentionally left accessible and open to non-authenticated users.
 
-This is no longer the case. From this release, all ACO-related GraphQL queries and mutations are inaccessible to non-authenticated users..
+This is no longer the case. From this release, all ACO-related GraphQL queries and mutations are inaccessible to non-authenticated users.
 
 <Alert type="danger">
 
-  Because having the mentioned GraphQL operations open to non-authenticated users might pose a data security risk to your organization, we strongly advise all users to [upgrade to 5.35.1](/docs/release-notes/5.35.1/upgrade-guide) as soon as possible.
+  Because having the mentioned GraphQL operations open to non-authenticated users might pose a data security risk to your organization, we strongly advise everybody to [upgrade to 5.35.1](/docs/release-notes/5.35.1/upgrade-guide) as soon as possible.
 
 </Alert>
 
