--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -13,11 +13,11 @@ release on GitHub.
 
 import pbEditorEditingValues from "./assets/pb-editor-editing-values.png";
 
-## Page Builder
+## Security
 
-### Check basic permissions for ACO schemas ([#3296](https://github.com/webiny/webiny-js/pull/3296))
+### Advanced Content Organization (ACO) - Critical Security Fix ([#3296](https://github.com/webiny/webiny-js/pull/3296))
 
-With [5.35.0](/docs/release-notes/5.35.0/changelog) release, we've introduced the [Advanced Content Organization (ACO)](/docs/release-notes/5.35.0/changelog#introducing-advanced-content-organization-for-page-builder) for Page Builder. 
+With [5.35.0](/docs/release-notes/5.35.0/changelog) release, we've introduced the [Advanced Content Organization (ACO)](/docs/release-notes/5.35.0/changelog#introducing-advanced-content-organization-for-page-builder) for Page Builder.
 
 Apart from the new frontend user interface, this new feature also introduced multiple new GraphQL queries and mutations on the backend GraphQL API. Unfortunately, prior to release, these operations were unintentionally left accessible and open to non-authenticated users.
 
@@ -28,6 +28,8 @@ This is no longer the case. From this release, all ACO-related GraphQL queries a
   Because having the mentioned GraphQL operations open to non-authenticated users might pose a data security risk to your organization, we strongly advise everybody to [upgrade to 5.35.1](/docs/release-notes/5.35.1/upgrade-guide) as soon as possible.
 
 </Alert>
+
+## Page Builder
 
 ### Editing Template Variables In Page Editor Now Works as Expected ([#3286](https://github.com/webiny/webiny-js/pull/3286))
 
