wip: create 5.35.1 release notes

--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -17,7 +17,7 @@ import pbEditorEditingValues from "./assets/pb-editor-editing-values.png";
 
 ### Advanced Content Organization (ACO) - Critical Security Fix ([#3296](https://github.com/webiny/webiny-js/pull/3296))
 
-With [5.35.0](/docs/release-notes/5.35.0/changelog) release, we've introduced the [Advanced Content Organization (ACO)](/docs/release-notes/5.35.0/changelog#introducing-advanced-content-organization-for-page-builder) for Page Builder.
+With the [5.35.0](/docs/release-notes/5.35.0/changelog) release, we've introduced the [Advanced Content Organization (ACO)](/docs/release-notes/5.35.0/changelog#introducing-advanced-content-organization-for-page-builder) for Page Builder.
 
 Apart from the new frontend user interface, this new feature also introduced multiple new GraphQL queries and mutations on the backend GraphQL API. Unfortunately, prior to release, these operations were unintentionally left accessible and open to non-authenticated users.
 
