--- a/src/docs/shared/release-notes/5.35.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.1/changelog.mdx
@@ -33,7 +33,7 @@ This is no longer the case. From this release, all ACO-related GraphQL queries a
 
 ### Editing Template Variables In Page Editor Now Works as Expected ([#3286](https://github.com/webiny/webiny-js/pull/3286))
 
-Prior to this release, editing values of template variables in Page Builder's page editor would not work as expected. This has now been addressed.
+Previously, when creating a page from a page template, editing values of template variables in the page editor would not work as expected. This has now been addressed.
 
 <Image src={pbEditorEditingValues} title={"Editing Template Variables in Page Editor"} />
 
