fix: update docs containing headless cms lambda references

--- a/src/docs/5.35.x/core-development-concepts/basics/importing-plugins.mdx
+++ b/src/docs/5.35.x/core-development-concepts/basics/importing-plugins.mdx
@@ -25,7 +25,7 @@ Throughout our docs, and especially in the how-to guides, we often show which pl
 This article explains how to add plugins to:
 
 - [React applications (Admin Area and Website)](../../core-development-concepts/basics/importing-plugins#react-applications)
-- [GraphQL APIs (Main GraphQL API and Headless CMS API)](../../core-development-concepts/basics/importing-plugins#graphql-apis)
+- [GraphQL API](../../core-development-concepts/basics/importing-plugins#graphql-api)
 - [Webiny CLI](../../core-development-concepts/basics/importing-plugins#webiny-cli)
 
 ## React Applications
@@ -84,18 +84,15 @@ If your application is deployed to the cloud, you'll need to redeploy it to appl
 
 </Alert>
 
-## GraphQL APIs
+## GraphQL API
 
-All GraphQL API Lambda function handlers present in the default Webiny project follow the same structure, and so, the process of registering new plugins is the same for all of them.
+We'll cover the GraphQL API Lambda function handler: **Main GraphQL API**. Its entry file can be found at the following location:
 
-We'll cover the two main GraphQL API Lambda function handlers: **Main GraphQL API** and **Headless CMS GraphQL API**. Their entry files can be found at the following locations:
-
-- Main GraphQL API: [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/next/api/code/graphql/src/index.ts)
-- Headless CMS GraphQL API: [`api/code/headlessCMS/src/index.ts`](https://github.com/webiny/webiny-js/blob/next/api/code/headlessCMS/src/index.ts)
+- Main GraphQL API: [`apps/api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/api/code/graphql/src/index.ts)
 
 To register a new plugin, you need to add it to the end of the `plugins` array that is being passed to the `createHandler` factory function.
 
-```ts api/code/{graphql|headlessCMS}/src/plugins/myPlugins.ts
+```ts api/code/graphql/src/plugins/myPlugins.ts
 // A dedicated file for your custom plugin(s)
 export default [
   {
@@ -109,7 +106,7 @@ export default [
 
 Now that we have a file containing our plugins, we can import it and register in the corresponding Lambda function entry file:
 
-```ts api/code/{graphql|headlessCMS}/src/index.ts
+```ts api/code/graphql/src/index.ts
 // ...other imports...
 
 // Import your custom plugins
