--- a/src/docs/5.35.x/core-development-concepts/extending-and-customizing/extend-graphql-api.mdx
+++ b/src/docs/5.35.x/core-development-concepts/extending-and-customizing/extend-graphql-api.mdx
@@ -36,7 +36,7 @@ The [Extend GraphQL API](../../core-development-concepts/scaffolding/extend-grap
 
 ### Headless CMS GraphQL API
 
-The **Headless CMS GraphQL API** is a special standalone GraphQL API that is introduced by the Headless CMS application. It's located in the [`api/code/headlessCMS`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/headlessCMS) folder and, like the default GraphQL API, can also be extended by developers.
+The **Headless CMS GraphQL API** is a special standalone GraphQL API that is introduced by the Headless CMS application. It's located in the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql) folder and, like the default GraphQL API, can also be extended by developers.
 
 <Alert type="info">
 
@@ -56,7 +56,7 @@ For example, we might want to add a new, Page Builder-related, `duplicatePage` m
 
 And although, depending on the application and the change we want to perform, some of the steps in the overall GraphQL extension process may differ, in all cases, we will want to start by registering a new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugin.
 
-The plugin is registered within your GraphQL API's application code. For example, if we wanted to extend the default GraphQL API, we would create the plugin inside of the [`api/code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql/src/plugins) folder, and register it in the [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql/src/index.ts) entrypoint file. On the other hand, if we wanted to extend the Headless CMS GraphQL API, we would create the plugin inside of the [`api/code/headlessCMS/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts) folder, and register it in the [`api/code/headlessCMS/src/plugins/index.ts`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts) entrypoint file.
+The plugin is registered within your GraphQL API's application code. For example, if we wanted to extend the default GraphQL API, we would create the plugin inside of the [`api/code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql/src/plugins) folder, and register it in the [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql/src/index.ts) entrypoint file. On the other hand, if we wanted to extend the Headless CMS GraphQL API, we would create the plugin inside of the [`api/code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql/src/index.ts) folder, and register it in the [`api/code/graphql/src/plugins/index.ts`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql/src/index.ts) entrypoint file.
 
 <Alert type="info">
 
