--- a/src/docs/5.35.x/headless-cms/extending/custom-field-type.mdx
+++ b/src/docs/5.35.x/headless-cms/extending/custom-field-type.mdx
@@ -187,10 +187,10 @@ Cool, so far, we are done with the UI part of the custom field. In the next step
 
 ### Field To GraphQL Plugin
 
-1. Create `fields/secretText` directory in `apps/api/headlessCMS/src`.
+1. Create `fields/secretText` directory in `apps/api/graphql/src`.
 2. Create a file [`secretTextFieldPlugin.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/custom-field-plugin/api/secretTextFieldPlugin.ts) in newly created directory.
 
-```ts apps/api/headlessCMS/src/fields/secretText/secretTextFieldPlugin.ts
+```ts apps/api/graphql/src/fields/secretText/secretTextFieldPlugin.ts
 import { CmsModelField, CmsModelFieldToGraphQLPlugin } from "@webiny/api-headless-cms/types";
 
 interface CreateListFiltersParams {
@@ -237,9 +237,9 @@ const plugin: CmsModelFieldToGraphQLPlugin = {
 export default plugin;
 ```
 
-3. Import this new plugin in `apps/api/headlessCMS/src/index.ts`.
+3. Import this new plugin in `apps/api/graphql/src/index.ts`.
 
-```diff-js apps/api/headlessCMS/src/index.ts
+```diff-js apps/api/graphql/src/index.ts
   (...)
   import scaffoldsPlugins from "./plugins/scaffolds";
 
@@ -256,10 +256,10 @@ export default plugin;
   });
 ```
 
-4. Deploy the API changes, run the [`webiny watch`](../../core-development-concepts/basics/watch-command) command to start a new watch session on `apps/api/headlessCMS` application code.
+4. Deploy the API changes, run the [`webiny watch`](../../core-development-concepts/basics/watch-command) command to start a new watch session on `apps/api/graphql` application code.
 
 ```
-yarn webiny watch apps/api/headlessCMS --env dev
+yarn webiny watch apps/api --env dev
 ```
 
 Super, we are all set to use our new field in the CMS model. At this stage, our custom field will behave like a normal text.
@@ -293,9 +293,9 @@ Notice how we had to run the [`yarn workspace`](https://classic.yarnpkg.com/en/d
 Now, let's proceed by creating a `CmsModelFieldToStoragePlugin` plugin for the **Secret Text** field.
 
 As a first step, we will encrypt data before storing it in the database.  
-Create a file [`secretTextFieldStoragePlugin.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/custom-field-plugin/api/secretTextFieldStoragePlugin.ts) in `apps/api/headlessCMS/src/fields/secretText` directory.
+Create a file [`secretTextFieldStoragePlugin.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/custom-field-plugin/api/secretTextFieldStoragePlugin.ts) in `apps/api/graphql/src/fields/secretText` directory.
 
-```ts apps/api/headlessCMS/src/fields/secretText/secretTextFieldStoragePlugin.ts
+```ts apps/api/graphql/src/fields/secretText/secretTextFieldStoragePlugin.ts
 import { StorageTransformPlugin } from "@webiny/api-headless-cms";
 import cryptr from "cryptr";
 
@@ -317,9 +317,9 @@ export default () => {
 };
 ```
 
-As a next step, import this new plugin in `apps/api/headlessCMS/src/index.ts`.
+As a next step, import this new plugin in `apps/api/graphql/src/index.ts`.
 
-```diff-js apps/api/headlessCMS/src/index.ts
+```diff-js apps/api/graphql/src/index.ts
 (...)
 import scaffoldsPlugins from "./plugins/scaffolds";
 
@@ -345,10 +345,10 @@ As we can see in the video above, when you create the entry and save it, you wil
 
 In the next step, let's decrypt the data after we retrieve it.
 
-1. Open the `apps/api/headlessCMS/src/fields/secretText/secretTextFieldStoragePlugin.ts` file.
+1. Open the `apps/api/graphql/src/fields/secretText/secretTextFieldStoragePlugin.ts` file.
 2. Update the `return` statement of `fromStorage` function with this:
 
-```ts apps/api/headlessCMS/src/fields/secretText/secretTextFieldStoragePlugin.ts {5}
+```ts apps/api/graphql/src/fields/secretText/secretTextFieldStoragePlugin.ts {5}
 const plugin = new StorageTransformPlugin({
   (...)
 
