--- a/src/docs/5.35.x/headless-cms/references/storage-transform-plugin.mdx
+++ b/src/docs/5.35.x/headless-cms/references/storage-transform-plugin.mdx
@@ -122,11 +122,11 @@ Of course, `copyToOtherStorageSystem` and `fetchFromOtherStorageSystem` are your
 
 ## Registering The Plugin
 
-For the plugin to take effect you must register it in the system. File to register it in is `api/headlessCMS/src/index.ts`.
+For the plugin to take effect you must register it in the system. File to register it in is `api/graphql/src/index.ts`.
 
 Note that if you register two plugins for the same field type, system will use the last one.
 
-```typescript api/headlessCMS/src/index.ts
+```typescript api/graphql/src/index.ts
 const handler = createHandler({
   plugins: [
     // ... other plugins
