--- a/src/docs/5.35.x/enterprise/auth0-integration.mdx
+++ b/src/docs/5.35.x/enterprise/auth0-integration.mdx
@@ -3,10 +3,10 @@ title: Setup Auth0
 description: Learn how to configure Auth0 with a multi-tenant Webiny project
 ---
 
-import { Alert } from "@/components/Alert";
-import { TabsComponent, TabsItem } from "@/components/TabsComponent";
 
-<CanIUseThis enterprise={true} since={"5.34.0"} />
+import {Alert} from "@/components/Alert";
+
+<CanIUseThis enterprise={true} since={"5.34.0"}/>
 
 <WhatYouWillLearn>
 
@@ -53,12 +53,6 @@ Add Auth0 module dependency to the GraphQL API dependencies:
 yarn workspace api-graphql add @webiny/api-security-auth0
 ```
 
-Add Auth0 module dependency to the Headless CMS API dependencies:
-
-```shell
-yarn workspace api-headless-cms add @webiny/api-security-auth0
-```
-
 Add Auth0 module dependency to the Admin app dependencies:
 
 ```shell
@@ -67,18 +61,9 @@ yarn workspace admin add @webiny/app-admin-auth0
 
 ## 3) Configure Auth0 in the GraphQL API
 
-We need to update security configuration in 2 Lambda functions: `graphql` and `headlessCMS`.
+We need to update security configuration in a `graphql` Lambda  function.
 
 The difference between your original file and the one below, is that we removed all Cognito plugins, and added Auth0 plugin instead, with some other tweaks to the security configuration. The most important changes are highlighted and commented for your convenience.
-
-<Alert type="info" title="IMPORTANT">
-  You need to update two files, one for the `graphql` Lambda function and one for the `headlessCMS`
-  Lambda function. Please grab the corresponding code from their dedicated tabs below. The code is
-  similar, but _not_ the same.
-</Alert>
-
-<TabsComponent>
-  <TabsItem title="Main GraphQL API">
 
 ```diff-ts apps/api/graphql/src/security.ts
 import { DocumentClient } from "aws-sdk/clients/dynamodb";
@@ -188,103 +173,6 @@ export default ({ documentClient }: { documentClient: DocumentClient }) => [
     anonymousAuthorization()
 ];
 ```
-
-  </TabsItem>
-  <TabsItem title="Headless CMS API">
-
-```diff-ts apps/api/headlessCMS/src/security.ts
-import { DocumentClient } from "aws-sdk/clients/dynamodb";
-import { createTenancyContext } from "@webiny/api-tenancy";
-import { createStorageOperations as tenancyStorageOperations } from "@webiny/api-tenancy-so-ddb";
-import { createSecurityContext } from "@webiny/api-security";
-import { createStorageOperations as securityStorageOperations } from "@webiny/api-security-so-ddb";
-import { authenticateUsingHttpHeader } from "@webiny/api-security/plugins/authenticateUsingHttpHeader";
-import apiKeyAuthentication from "@webiny/api-security/plugins/apiKeyAuthentication";
-import apiKeyAuthorization from "@webiny/api-security/plugins/apiKeyAuthorization";
-import anonymousAuthorization from "@webiny/api-security/plugins/anonymousAuthorization";
-+ import { createAuth0 } from "@webiny/api-security-auth0";
-
-export default ({ documentClient }: { documentClient: DocumentClient }) => [
-    /**
-     * Create Tenancy app in the `context`.
-     */
-    createTenancyContext({
-        storageOperations: tenancyStorageOperations({ documentClient })
-    }),
-
-    /**
-     * Create Security app in the `context`.
-     */
-    createSecurityContext({
-+       /**
-+        * For Auth0, this must be set to `false`, as we don't have links in the database.
-+        */
-+       verifyIdentityToTenantLink: false,
-        storageOperations: securityStorageOperations({ documentClient })
-    }),
-
-    /**
-     * Perform authentication using the common "Authorization" HTTP header.
-     * This will fetch the value of the header, and execute the authentication process.
-     */
-    authenticateUsingHttpHeader(),
-
-+   /**
-+    * Configure Auth0 authentication and authorization.
-+    */
-+   createAuth0({
-+       /**
-+        * `domain` is required for token verification.
-+        */
-+       domain: String(process.env.AUTH0_DOMAIN),
-+       /**
-+        * Construct the identity object and map token claims to arbitrary identity properties.
-+        */
-+       getIdentity({ token }) {
-+           return {
-+               id: token["sub"],
-+               type: "admin",
-+               displayName: token["name"],
-+               // Assign any custom values you might need.
-+               group: token["group"]
-+           };
-+       },
-+       /**
-+        * Get the slug of a security group to fetch permissions from.
-+        */
-+       getGroupSlug(context) {
-+           const identity = context.security.getIdentity();
-+
-+           // Return group slug you want to map this identity to.
-+           return identity["group"];
-+       }
-+   }),
-
-    /**
-     * API Key authenticator.
-     * API Keys are a standalone entity, and are not connected to users in any way.
-     * They identify a project, a 3rd party client, not a particular user.
-     * They are used for programmatic API access, CMS data import/export, etc.
-     */
-    apiKeyAuthentication({ identityType: "api-key" }),
-
-    /**
-     * Authorization plugin to fetch permissions for a verified API key.
-     * The "identityType" must match the authentication plugin used to load the identity.
-     */
-    apiKeyAuthorization({ identityType: "api-key" }),
-
-    /**
-     * Authorization plugin to load permissions for anonymous requests.
-     * This allows you to control which API resources can be accessed publicly.
-     * The authorization is performed by loading permissions from the "anonymous" user group.
-     */
-    anonymousAuthorization()
-];
-```
-
-  </TabsItem>
-</TabsComponent>
 
 The last thing to do is to define Auth0 environment variables.
 
