--- a/src/docs/5.35.x/enterprise/okta-integration.mdx
+++ b/src/docs/5.35.x/enterprise/okta-integration.mdx
@@ -3,8 +3,8 @@ title: Setup Okta
 description: Learn how to configure Okta with a multi-tenant Webiny project
 ---
 
-import { Alert } from "@/components/Alert";
-import { TabsComponent, TabsItem } from "@/components/TabsComponent";
+
+import {Alert} from "@/components/Alert";
 
 <Alert type="info" title="Can I use this?">
 
@@ -53,12 +53,6 @@ Add Okta module dependency to the GraphQL API dependencies:
 yarn workspace api-graphql add @webiny/api-security-okta
 ```
 
-Add Okta module dependency to the Headless CMS API dependencies:
-
-```shell
-yarn workspace api-headless-cms add @webiny/api-security-okta
-```
-
 Add Okta module dependency to the Admin app dependencies:
 
 ```shell
@@ -67,7 +61,7 @@ yarn workspace admin add @webiny/app-admin-okta
 
 ## 3) Configure Okta in the GraphQL API
 
-We need to update security configuration in 2 Lambda functions: `graphql` and `headlessCMS`.
+We need to update security configuration in the `graphql` Lambda function.
 
 The difference between your original file and the one below, is that we removed all Cognito plugins, and added Okta plugin instead, with some other tweaks to the security configuration. The most important changes are highlighted and commented for your convenience.
 
@@ -75,8 +69,7 @@ The difference between your original file and the one below, is that we removed 
   You need to update one file for the `graphql` Lambda function. Please grab the code from below.
 </Alert>
 
-<TabsComponent>
-  <TabsItem title="Main GraphQL API">
+
 
 ```diff-ts apps/api/graphql/src/security.ts
 import { DocumentClient } from "aws-sdk/clients/dynamodb";
@@ -182,99 +175,6 @@ export default ({ documentClient }: { documentClient: DocumentClient }) => [
     anonymousAuthorization()
 ];
 ```
-
-  </TabsItem>
-  <TabsItem title="Headless CMS API">
-
-```diff-ts apps/api/headlessCMS/src/security.ts
-import { DocumentClient } from "aws-sdk/clients/dynamodb";
-import { createTenancyContext } from "@webiny/api-tenancy";
-import { createStorageOperations as tenancyStorageOperations } from "@webiny/api-tenancy-so-ddb";
-import { createSecurityContext } from "@webiny/api-security";
-import { createStorageOperations as securityStorageOperations } from "@webiny/api-security-so-ddb";
-import { authenticateUsingHttpHeader } from "@webiny/api-security/plugins/authenticateUsingHttpHeader";
-import apiKeyAuthentication from "@webiny/api-security/plugins/apiKeyAuthentication";
-import apiKeyAuthorization from "@webiny/api-security/plugins/apiKeyAuthorization";
-import anonymousAuthorization from "@webiny/api-security/plugins/anonymousAuthorization";
-+ import { createOkta } from "@webiny/api-security-okta";
-
-export default ({ documentClient }: { documentClient: DocumentClient }) => [
-    /**
-     * Create Tenancy app in the `context`.
-     */
-    createTenancyContext({
-        storageOperations: tenancyStorageOperations({ documentClient })
-    }),
-
-    /**
-     * Create Security app in the `context`.
-     */
-    createSecurityContext({
-+       /**
-+        * For Okta, this must be set to `false`, as we don't have links in the database.
-+        */
-+       verifyIdentityToTenantLink: false,
-        storageOperations: securityStorageOperations({ documentClient })
-    }),
-
-    /**
-     * Perform authentication using the common "Authorization" HTTP header.
-     * This will fetch the value of the header, and execute the authentication process.
-     */
-    authenticateUsingHttpHeader(),
-
-+   /**
-+    * Configure Okta authentication and authorization.
-+    */
-+   createOkta({
-+       /**
-+        * `issuer` is required for token verification.
-+        */
-+       issuer: process.env.OKTA_ISSUER as string,
-+       /**
-+        * Construct the identity object and map token claims to arbitrary identity properties.
-+        */
-+       getIdentity({ token }) {
-+           return {
-+               id: token.sub,
-+               type: "admin",
-+               displayName: token.name,
-+               group: token.webiny_group
-+           };
-+       },
-+       /**
-+        * Get the slug of a security group to fetch permissions from.
-+        */
-+       getGroupSlug(context) {
-+           return context.security.getIdentity().group;
-+       }
-+   }),
-
-    /**
-     * API Key authenticator.
-     * API Keys are a standalone entity, and are not connected to users in any way.
-     * They identify a project, a 3rd party client, not a particular user.
-     * They are used for programmatic API access, CMS data import/export, etc.
-     */
-    apiKeyAuthentication({ identityType: "api-key" }),
-
-    /**
-     * Authorization plugin to fetch permissions for a verified API key.
-     * The "identityType" must match the authentication plugin used to load the identity.
-     */
-    apiKeyAuthorization({ identityType: "api-key" }),
-
-    /**
-     * Authorization plugin to load permissions for anonymous requests.
-     * This allows you to control which API resources can be accessed publicly.
-     * The authorization is performed by loading permissions from the "anonymous" user group.
-     */
-    anonymousAuthorization()
-];
-```
-
-  </TabsItem>
-</TabsComponent>
 
 The last thing to do is to define the `OKTA_ISSUER` environment variable.
 
