--- a/src/docs/5.34.x/user-guides/page-builder/essentials/glossary.mdx
+++ b/src/docs/5.34.x/user-guides/page-builder/essentials/glossary.mdx
@@ -11,10 +11,10 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-## Grid Block
+## Grid Component
 
-Grid block is the fundamental building block on a page. When you create a page, the first thing to add is a grid block.
-It serves as the parent container for all the page elements.
+Grid component is the fundamental building block on a page. When you create a page, the first thing to add is a grid block.
+It serves as the parent container for all the page elements. You can learn more about Grid component in this [tutorial](https://youtu.be/a5WyEg0ucN0?list=PL9HlKSQaEuXQdyCQDH_w7VQQcZbc67cPU).
 
 ## Page Element
 
