docs: added training course guide and improve create page guide.

--- a/src/docs/5.34.x/user-guides/page-builder/essentials/create-page.mdx
+++ b/src/docs/5.34.x/user-guides/page-builder/essentials/create-page.mdx
@@ -110,11 +110,11 @@ We will do this in 6 steps:
 
     b. Click **UPLOAD**.
 
-    ✔️ Your operating system's file explorer screen opens.
+    ✔️ The file explorer screen opens.
 
     c. From the file explorer, upload the following image:
 
-    *(Add Image)*
+    ![Background Image](./assets/create-page/background-image.svg)
 
     d. Click the uploaded image in the media manager.
 
@@ -187,11 +187,11 @@ We will do this in 6 steps:
 
 2. Click **UPLOAD**.
 
-    ✔️ Your operating system's file explorer screen opens.
+    ✔️ The file explorer screen opens.
 
 3. From the file explorer, upload the following image:
 
-    *(Add Image)*
+    ![Hero Image](./assets/create-page/hero-image.svg)
 
 4. Click the uploaded image in the media manager.
 
