docs: improved ExternalLink component, added icon prop to show and hide external link icon

--- a/src/docs/5.34.x/user-guides/page-builder/essentials/training-course.mdx
+++ b/src/docs/5.34.x/user-guides/page-builder/essentials/training-course.mdx
@@ -7,6 +7,6 @@ import trainingCourseYouTube from "./assets/training-course/pb-training-course-y
 
 We created a [video training course](https://www.youtube.com/playlist?list=PL9HlKSQaEuXQdyCQDH_w7VQQcZbc67cPU) for the Webiny Page Builder. This course covers the main functionality of Page Builder and in this course, you will learn how to leverage the powerful Page Builder features to create stunning web pages.
 
-<ExternalLink href={`https://www.youtube.com/playlist?list=PL9HlKSQaEuXQdyCQDH_w7VQQcZbc67cPU`}>
+<ExternalLink href={`https://www.youtube.com/playlist?list=PL9HlKSQaEuXQdyCQDH_w7VQQcZbc67cPU`} icon={false}>
     <Image src={trainingCourseYouTube} title="Page Builder Training Course" canEnlarge={false}  />
 </ExternalLink>
