--- a/src/docs/5.28.x/infrastructure/pulumi-iac/iac-with-pulumi.mdx
+++ b/src/docs/5.28.x/infrastructure/pulumi-iac/iac-with-pulumi.mdx
@@ -176,7 +176,12 @@ Currently, Webiny is not using the [Automation API](https://www.pulumi.com/blog/
 
 ### Is it possible to use a different infrastructure-as-code solution?
 
-Yes, you can certainly use a different solution (for example [CloudFormation](https://aws.amazon.com/cloudformation/) or [Terraform](https://www.terraform.io/)). Feel free to [message us](https://www.webiny.com/slack) if you have this type of need. We'd be glad to assist in that regard.
+Switching to a different infrastructure-as-code (IaC) solution would require a significant amount of work as it would involve rewriting almost all of the Webiny IaC code from scratch for a different IaC solution. **Therefore, we do not recommend it.** 
+
+However, if you want to experiment with it, you would need to create a custom CLI plugin similar to the [Webiny CLI plugin for Pulumi](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-deploy-pulumi). This plugin is responsible for creating the deploy, destroy, watch, and other commands.  
+To use your custom plugin, you would then need to import it into the `webiny.project.ts` file and remove the Pulumi plugin. The most challenging part would be transforming all of the Pulumi code into respective IaC code (i.e. transforming all Pulumi code to [CloudFormation](https://aws.amazon.com/cloudformation/), [Terraform](https://www.terraform.io/), or other IaC). You can refer to the Pulumi code to see the resources Webiny deploys and the [Cloud Infrastructure documentation](https://www.webiny.com/docs/architecture/introduction) for more information.
+
+**Please keep in mind that this process will require a significant amount of effort, and it's recommended to stick with Pulumi unless your organization has strict policies that require using a different IaC solution.**
 
 ### What is stack output?
 
