fix: fm-aco-overview extension

--- a/src/docs/shared/release-notes/5.36.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.0/changelog.mdx
@@ -4,7 +4,7 @@ title: Webiny 5.36.0 Changelog
 description: See what's new in Webiny version 5.36.0.
 ---
 
-import fmAcoOverview from "./assets/fm-aco-overview.png";
+import fmAcoOverview from "./assets/fm-aco-overview.jpg";
 
 <GithubRelease version={"5.36.0"} />
 
