fix: update modify cloud infra doc

--- a/src/docs/5.36.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/src/docs/5.36.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -263,7 +263,7 @@ export default createCoreApp({
 });
 ```
 
-#### Using a Shared Elasticsearch Domain And Index Prefix
+#### Using a Shared Amazon Elasticsearch (OpenSearch) Domain
 
 For development purposes, sometimes it's reasonable to set up a single Elasticsearch domain that will be shared across multiple environments your Webiny project is deployed into. This can be achieved via the `elasticSearch` parameter, via the two `webiny.application.ts` configuration files:
 
