--- a/src/docs/shared/release-notes/5.36.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.0/changelog.mdx
@@ -22,3 +22,9 @@ The Advanced Content Organization (ACO) for File Manager is a new feature that p
 2. Switch to "Table" mode, having a nice overview on the most important file data, such as "Name", "Type", "Size", "Last modified" and "Author". 
 3. Sort both folders and files based on "Name" and "Last Modified". This feature makes it easier for users to find specific files and folders quickly.
 4. Move a files across the hierarchy tree, and it has no impact on the file URL. The two have been decoupled to ensure users have the flexibility they need without having a negative impact on SEO if they decide to restructure their folder/file organization.
+
+## Deployments
+
+### Configure a Shared ElasticSearch Domain via `webiny.application.ts` ([#3308](https://github.com/webiny/webiny-js/pull/3308))
+
+Prior to this release, setting up a shared ElasticSearch (OpenSearch) domain was achieved via a pair of environment variables, which showed not to be the most convenient way of doing things. So, with this release, we've introduced the ability to configure a shared ElasticSearch domain via two `webiny.application.ts` files. To learn more, please refer to the updated [Modify Cloud Infrastructure](/docs/{exact:5.36.x}/infrastructure/basics/modify-cloud-infrastructure#using-a-shared-amazon-elasticsearch-open-search-domain) article.
