--- a/src/docs/5.36.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/src/docs/5.36.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -302,7 +302,7 @@ export default createCoreApp({
 import { createApiApp } from "@webiny/serverless-cms-aws";
 
 // Here we're listing all environments that will use the shared ElasticSearch domain.
-const ENVIRONMENTS_USING_SHARED_ES_DOMAIN = ["dev", "dev-2"];
+const ENVIRONMENTS_USING_SHARED_ES_DOMAIN = ["dev", "other-dev"];
 
 export default createCoreApp({
     pulumiResourceNamePrefix: "wby-",
