fix: correct string

--- a/src/docs/shared/release-notes/5.36.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.0/changelog.mdx
@@ -27,4 +27,4 @@ The Advanced Content Organization (ACO) for File Manager is a new feature that p
 
 ### Configure a Shared ElasticSearch Domain via `webiny.application.ts` ([#3308](https://github.com/webiny/webiny-js/pull/3308))
 
-Prior to this release, setting up a shared ElasticSearch (OpenSearch) domain was achieved via a pair of environment variables, which showed not to be the most convenient way of doing things. So, with this release, we've introduced the ability to configure a shared ElasticSearch domain via two `webiny.application.ts` files. To learn more, please refer to the updated [Modify Cloud Infrastructure](/docs/{exact:5.36.x}/infrastructure/basics/modify-cloud-infrastructure#using-a-shared-amazon-elasticsearch-open-search-domain) article.
+Prior to this release, setting up a shared ElasticSearch (OpenSearch) domain was achieved via a pair of environment variables, which showed not to be the most convenient way of doing it. So, with this release, we've introduced the ability to configure a shared ElasticSearch domain via two `webiny.application.ts` files. To learn more, please refer to the updated [Modify Cloud Infrastructure](/docs/{exact:5.36.x}/infrastructure/basics/modify-cloud-infrastructure#using-a-shared-amazon-elasticsearch-open-search-domain) article.
