--- a/src/docs/shared/release-notes/5.36.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.36.0/upgrade-guide.mdx
@@ -5,6 +5,8 @@ description: Learn how to upgrade Webiny from 5.35.x to 5.36.0.
 
 import { Alert } from "@/components/Alert";
 
+import fmSettings from "./assets/fm-settings.png";
+
 <Alert type={"danger"}>
 
 Before upgrading to `5.36.0`, please ensure your Webiny project is using the [new project
@@ -57,6 +59,13 @@ Proceed by redeploying your Webiny project:
 # Execute in your project root.
 yarn webiny deploy --env {environment}
 ```
+
+### Additional Notes
+
+With this release, we significantly improved our file uploading capabilities, enabling support for files up to a whopping 5TB in size. 
+Remember to review the default **Maximum file upload size** limit you find within the File Manager Settings page (**Main Navigation -> Settings -> File Manager**).
+
+<Image src={fmSettings} title={"File Manager Settings - Maximum file upload size"} />
 
 <Alert type="warning">
 
