--- a/src/docs/shared/release-notes/5.36.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.0/changelog.mdx
@@ -5,6 +5,7 @@ description: See what's new in Webiny version 5.36.0.
 ---
 
 import fmAcoOverview from "./assets/fm-aco-overview.jpg";
+import peButtonIconPos from "./assets/pe-button-icon-pos.png";
 
 <GithubRelease version={"5.36.0"} />
 
@@ -19,7 +20,7 @@ The Advanced Content Organization (ACO) for File Manager is a new feature that p
 **With the new File Manager users can:**
 
 1. Create and update a multi-level folder structure.
-2. Switch to "Table" mode, having a nice overview on the most important file data, such as "Name", "Type", "Size", "Last modified" and "Author". 
+2. Switch to "Table" mode, having a nice overview on the most important file data, such as "Name", "Type", "Size", "Last modified" and "Author".
 3. Sort both folders and files based on "Name" and "Last Modified". This feature makes it easier for users to find specific files and folders quickly.
 4. Move a files across the hierarchy tree, and it has no impact on the file URL. The two have been decoupled to ensure users have the flexibility they need without having a negative impact on SEO if they decide to restructure their folder/file organization.
 
@@ -37,6 +38,14 @@ With this release, we've fixed an issue related to file uploads with upper case 
 ### Fix import pages process and page list refresh ([#3318](https://github.com/webiny/webiny-js/pull/3318))
 
 With this release, we've fixed an issue related to import pages process introduced by 5.35.0 version. After importing pages into Page Builder, the list wasn't showing the newly created page. This behavior has been fixed, now the page list refresh correctly.
+
+### Button Page Element - Icon Position CSS Class ([#3317](https://github.com/webiny/webiny-js/pull/3317))
+
+The `div` element that represents the **Button** page element's icon now also includes an additional CSS class that indicates icon's position. With the base `button-icon` CSS class, the element will now also include one of the following classes: `button-icon-left`, `button-icon-right`, `button-icon-top`, `button-icon-bottom`. 
+
+This enables developers to apply different CSS rules based on the position of the icon.
+
+<Image src={peButtonIconPos} title={"Button Page Element - Added Icon Position CSS Class"} />
 
 ## Deployments
 
